--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
   "scripts": {
     "dev-server": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
