--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "babel-loader": "^8.1.0",
     "babel-polyfill": "^6.26.0",
     "buffer": "^4.9.2",
-    "dotenv": "^8.2.0",
     "emojis-list": "^3.0.0",
     "esrecurse": "^4.2.1",
     "estraverse": "^4.3.0",
@@ -30,11 +29,11 @@
     "live-server": "^1.2.1",
     "mapbox-gl": "^1.11.1",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "dev-server": "webpack-dev-server --mode development",
