--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "dev-server": "webpack-dev-server --mode development",
+    "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
